# agent-threat-modeler

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  _check_results.py  _launch_docushare.py  _launch_test.py  _launch_test_ai.py  _run_docushare_scan.py  _upload_and_scan.py  cli.py  config.json.example  docker-compose.yml  forge.config.js  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run.py  test_json_parser.py
.github/workflows/: ci.yml
agentictm/: __init__.py  config.py  core.py  diagnostics.py  logging.py  memory.py  models.py  state.py
agentictm/agents/: __init__.py  _utils.py  ai_threat_analyst.py  arch_clarifier.py  architecture_parser.py  base.py  debate.py  (+23 more)
docs/: 00_indice.md  01_introduccion.md  02_fundamentos_academicos.md  03_arquitectura_pipeline.md  04_agentes.md  05_sistema_rag.md  06_modelos_llm.md  07_api_y_frontend.md  08_configuracion.md  09_guia_de_uso.md  10_flujo_de_datos.md  11_mejoras_roadmap.md  12_troubleshooting.md  13_evaluacion_profunda_y_plan_de_accion.md  14_analisis_objetivo_y_roadmap.md  15_evaluacion_independiente.md  16_mejoras_priorizadas.md  17_electron_migration.md
electron/: main.js  preload.js  splash.html
tests/: conftest.py  test_agent_quality.py  test_api_integration.py  test_core.py  test_golden_architectures.py  test_input_triage.py  test_live_agents.py  test_mermaid_parser.py  test_new_features.py  test_pipeline_smoke.py  test_quality_compliance.py  test_reviewer_flow.py  test_security.py  test_v2_docushare.py
(+33 files in other folders)
